Make debugging log dump of JavaScript objects smarter, and non-recursive by default. Enable Life world edge wrapping by default. Refactor LifeBoard and LifeGrid code. Fix toggling of cell state by clicking. Add a hover colour to suggest this to the user.
git-svn-id: https://svn/svn/LifeJavaScript@1738 d75fb2d8-f9ea-0310-9219-f9bc96eeea74

--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,14 @@ tr.LifeRow {
 td.Alive {
 	background-color: #00ff00;
 }
+td.Alive:hover {
+	background-color: #ffff00;
+}
 td.Dead {
 	background-color: #000000;
+}
+td.Dead:hover {
+	background-color: #ff0000;
 }
 #logDiv {
 	width: 50%;
